kubernetes-resources/01.aspnetapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: aspnetapp
          image: monitorcontainerregistry.azurecr.io/aspnetapp:v1.0
          ports:
            - containerPort: 80
              name: http
