kubernetes-resources/02.aspnetapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
    service: aspnetapp
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: aspnetapp
